# fct

./: LICENSE  README.md  header.tex  pyproject.toml
.github/workflows/: publish.yml
examples/anon/: makefile
examples/labelled/: brief.tex  makefile
fct/: anoni.py  bblmark.py  bibrebut.py  csv2bib.py  eml2csv.py  eml2tex.py  fct_example.py  gmsg2pdf.py  pdf2tex.py  pdftxt2tex.py  quotesearch.py  remove_unicode.py  timeline_plotter.py
fct_examples/anon/: repl.yml  story.txt  story_anon.txt
fct_examples/labelled/: full.tex  label_table.bib  timeline.yml
fct_examples/labelled/emails/: some_email_thread.tex
fct_examples/labelled/psych_rep_nov_22/: large_report.tex
fct_resources/: extract_header.tex  header.tex
resources/: header.tex
