[tool.poetry]
name = "fct"
version = "0.1.0"
description = "command line utilities for preparation of quote databases from original documents, for use in family court"
authors = ["tilmaerts <95282593+tilmaerts@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bibtexparser = "^1.4.1"
filelock = "^3.13.4"
numpy = "^1.26.4"
pymupdf = "^1.24.1"
rapidfuzz = "^3.8.1"
pandas = "^2.2.2"
unidecode = "^1.3.8"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
fct_qs = "fct.quotesearch:main"
fct_csvbib = "fct.csv2bib:main"
fct_timeline = "fct.timeline_plotter:main"