[tool.poetry]
name = "fct1"
version = "0.0.1"
description = "command line utilities for preparation of quote databases from original documents, for use in family court"
authors = ["tilmaerts <95282593+tilmaerts@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "fct", from = "." }
]
urls = { "Pypi" = "https://pypi.org/project/fct1/"}
include = [
    "fct_examples/labelled/*/*tex",
    "fct_examples/labelled/*yml",
    "fct_examples/labelled/makefile",
    "fct_examples/labelled/*tex",
    "fct_examples/labelled/*yml",
    "fct_examples/anon/makefile",
    "fct_examples/anon/story.txt",
    "fct_examples/anon/repl.yml",
    "fct_resources/*",
]


# [tool.poetry.package]
# include = "examples"
# from = "fct"

[tool.poetry.dependencies]
python = "^3.9"
bibtexparser = "^1.4.1"
filelock = "^3.13.4"
numpy = "^1.26.4"
pymupdf = "1.24.9"
rapidfuzz = "^3.8.1"
pandas = "^2.2.2"
unidecode = "^1.3.8"
matplotlib = "^3.8.4"
demoji = "^1.1.0"
openpyxl = "^3.1.2"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
fct_qs = "fct.quotesearch:main"
fct_csvbib = "fct.csv2bib:main"
fct_timeline = "fct.timeline_plotter:main"
fct_anon = "fct.anoni:main"
fct_example = "fct.fct_example:main"
fct_bblmark = "fct.bblmark:main"
fct_pdf2tex = "fct.pdf2tex:main"
fct_gmsg2pdf = "fct.gmsg2pdf:main"
fct_removeunicode = "fct.remove_unicode:main"